Finalized Project. Converts english to morse and more to english.

--- a/Project 1.html
+++ b/Project 1.html
@@ -34,14 +34,14 @@
             </div>
         </form>
 
-        
+
 
     </div>
     <div id="moveDown">
         <hr>
-			<span><p>Fork me on </p>
-			<a href="https://github.com/JPAnderson/WebDev_Project_1"><b>GitHub</b></a>\
-			</span>
+			<p>Fork me on </p>
+			<a href="https://github.com/JPAnderson/WebDev_Project_1"><b>GitHub</b></a>
+
     </div>
 </div>
 
